# dgi14-voxels

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  PerlinNoise.hpp  Renderer.hpp  main.hpp  noise.hpp
shader/: CMakeLists.txt  VoxelRenderer.f.glsl  shader.f.glsl  shader.v.glsl  textures.c
src/: CMakeLists.txt  PerlinNoise.cpp  Renderer.cpp  VoxelRenderer.v.glsl  main.cpp  noise.cpp  perlin.c
